--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,45 @@
   <head>
     <title>Tests</title>
     <%= csrf_meta_tags %>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <div class="container">
+
+<nav class="navbar navbar-expand-lg navbar-light", style="background-color: #A0D3F9;">
+  <%= link_to image_tag("logo.jpg", style: 'height:60px;width:auto;'), root_path, class: "navbar-left" %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/statements">Главная <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/tcategories">Тесты</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Новости</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="#">Контакты</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+</div>
+ <!-- Navbar content -->
+
+<div class="container">
+    <div class="mt-4">
+     <%= image_tag("logo3.jpg", style: 'height:auto;width:100%;', class: 'border-top border-bottom border-info') %>
+    </div>
     <%= yield %>
+    </div>
   </body>
 </html>
