--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -17,24 +17,24 @@
   </div>
 
   <div class="field">
-    <%= form.label :fio %>
+    <%= form.label :fio, "ФИО" %>
     <%= form.text_field :fio, id: :statement_fio %>
   </div>
 
   <div class="field">
-    <%= form.label :phone %>
+    <%= form.label :phone, "Телефон" %>
     <%= form.text_field :phone, id: :statement_phone %>
   </div>
 
   <div class="field">
-    <%= form.label :position %>
+    <%= form.label :position, "Должность" %>
     <%= form.text_field :position, id: :statement_position %>
   </div>
 
   <div class="field">
-    <%= form.label :test_id %>
-    <%= form.text_field :test_id, id: :statement_test_id %>
+    <%= form.hidden_field :test_id, :value => @test_id %>
   </div>
+
 
   <div class="actions">
     <%= form.submit %>
