--- a/app/views/survey/new.html.erb
+++ b/app/views/survey/new.html.erb
@@ -1,18 +1,23 @@
-<%= form_for :survey do |f| %>
+<%= form_for :survey, url: survey_index_path(id: @test) do |f| %>
  
-
-  <h1><%= @test.title %></h1>
+  <h1>ТЕСТ <%= @test.title %></h1>
   
     <% @test.questions.each_with_index do |q, index| %>
 
- 	<div> Вопрос: <%= q.body %></div> <br>
+ 	<div style="font-size:2em"><%= q.body %></div> <br>
 
  		<div>
- 			Ответы:
+ 			Варинаты:
+ 			<table>
+ 				<tr>
  			<% q.answers.each do |a| %>
+ 				<td>
 			    <%= f.label index.to_s.parameterize.underscore.to_sym, a.body, :value => a.id  %>
-			    <%= f.radio_button :index, true %>
+			    <%= f.radio_button q.id, a.id %>
+			</td>
  			<% end %>
+ 			</tr>
+ 			</table>
  		</div>
  	<% end %>
 
