--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -23,6 +23,7 @@
         <td><%= link_to 'Show', test %></td>
         <td><%= link_to 'Edit', edit_test_path(test) %></td>
         <td><%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td> <%= link_to 'Пройти тест', new_survey_path(:test_id => test) %></td>
       </tr>
     <% end %>
   </tbody>
