--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -31,6 +31,16 @@
     <%= form.text_field :position, id: :statement_position %>
   </div>
 
+    <div class="field">
+    <%= form.label :place, "Место работы" %>
+    <%= form.text_field :place, id: :statement_place %>
+  </div>
+
+    <div class="field">
+    <%= form.label :name, "Имя" %>
+    <%= form.text_field :name, id: :statement_name %>
+  </div>
+
   <div class="field">
     <%= form.hidden_field :test_id, :value => @test_id %>
   </div>
