fixed wyswig attachments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
         <a class="nav-link" href="/statements">Главная <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tcategories">Тесты</a>
+        <a class="nav-link" href="/tests">Тесты</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Новости</a>
+        <a class="nav-link" href="/posts">Новости</a>
       </li>
             <li class="nav-item">
         <a class="nav-link" href="#">Контакты</a>
