--- a/app/views/pages/wellcome.html.erb
+++ b/app/views/pages/wellcome.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-5">
 	<div class="row">
 		<div class="col-5 d-flex justify-content-center">
 			<%= image_tag 'example.jpg', class: "d-block mw-100", style: "max-height: 350px; height: auto;" %>
@@ -8,8 +8,10 @@
 		</div>
 	</div>	
 </div>
-
-<div class="container">
+<div class="row d-flex justify-content-center">
+ <h1> Пройди эти великолепные тесты, уеба</h1>
+</div>
+<div class="container mt-3">
 	<% @tcategory.each do |category| %>
 	<br>
 		<div class="row">
