--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,34 +1,44 @@
 <p id="notice"><%= notice %></p>
+<style type="text/css">
+   A {
+    color: red; /* Цвет ссылок */
+   }
+   A:visited {
+    color: #000000; /* Цвет посещенных ссылок */
+   }
+   A:active {
+    color: #000000; /* Цвет активных ссылок */
+   }
+  </style>
+<div class="row d-flex justify-content-center">
+<h1>Супер тесты</h1>
+</div>
+<div class="container mt-3">
+  <% @tcategory.each do |category| %>
+  <br>
+    <div class="row">
+      <div class="col-12 col-md-5"> 
+        <div class="row d-flex justify-content-center">
+        <%= image_tag 'shap.png', size: "100" %> 
+        </div>
+        <div class="row d-flex justify-content-center">
+        <span style="font-size: 32px; font-weight: bold;"><%=category.title %></span>
+        </div>
+      </div> 
+      
+      <div class="col-12 col-md-7">
+        <ul class="list-unstyled">
+          <% category.tests.each do |test| %>
+            <li> <%= image_tag 'logo2.jpg', size: "54x59" %> <%= link_to test.title, test_path(test), style: "font-size:20px" %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-<h1>Tests</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Active</th>
-      <th>Tcategory</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @tests.each do |test| %>
-      <tr>
-        <td><%= test.title %></td>
-        <td><%= test.description %></td>
-        <td><%= test.active %></td>
-        <td><%= test.tcategory %></td>
-        <td><%= link_to 'Show', test %></td>
-        <td><%= link_to 'Edit', edit_test_path(test) %></td>
-        <td><%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td> <%= link_to 'Пройти тест', new_survey_path(:test_id => test) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
 
 <%= link_to 'New Test', new_test_path %>
