create search tickets

--- a/app/views/pages/wellcome.html.erb
+++ b/app/views/pages/wellcome.html.erb
@@ -4,12 +4,15 @@
 			<%= image_tag 'example.jpg', class: "d-block mw-100", style: "max-height: 350px; height: auto;" %>
 		</div>
 		<div class="col-7 d-flex align-items-center">
-			<span style="font-size: 30px; text-align: center"><strong> Ахуеть, какой то текст непонятный пиздец можно же такое написать бляяяя</strong> Короче, купи сертификат, заебал. че как тупой. Вон пройди тесты ниже и докажи что ты не дурачек</span>
+			<span style="font-size: 30px; text-align: center"><strong> Проверьте свои знания:</strong> <br>
+				• Бесплатно, онлайн и без регистрации; <br>
+				• С дальнейшей возможностью заказать изготовление сертификата при успешном прохождении теста со скидкой ~35%; <br>
+• Сертификат для Вашего портфолио будет готов в течение 24-х часов.</span>
 		</div>
 	</div>	
 </div>
 <div class="row d-flex justify-content-center">
- <h1> Пройди эти великолепные тесты, уеба</h1>
+ <h1> Пройди эти великолепные тесты, уеба</h1> <!--Тестирование для педагогов, учителей, воспитателей, психологов, логопедов, дефектологов, методистов и других представителей сферы образования -->
 </div>
 <div class="container mt-3">
 	<% @tcategory.each do |category| %>
