--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -11,42 +11,44 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_field :email, id: :statement_email %>
+    <%= form.text_field :email, id: :statement_email, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :fio, "ФИО" %>
-    <%= form.text_field :fio, id: :statement_fio %>
+    <%= form.text_field :fio, id: :statement_fio, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :phone, "Телефон" %>
-    <%= form.text_field :phone, id: :statement_phone %>
+    <%= form.text_field :phone, id: :statement_phone, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :position, "Должность" %>
-    <%= form.text_field :position, id: :statement_position %>
+    <%= form.text_field :position, id: :statement_position, class:"form-control" %>
   </div>
 
-    <div class="field">
+    <div class="form-group">
     <%= form.label :place, "Место работы" %>
-    <%= form.text_field :place, id: :statement_place %>
+    <%= form.text_field :place, id: :statement_place, class:"form-control" %>
   </div>
 
-    <div class="field">
+    <div class="form-group">
     <%= form.label :name, "Имя" %>
-    <%= form.text_field :name, id: :statement_name %>
+    <%= form.text_field :name, id: :statement_name, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.hidden_field :test_id, :value => @test_id %>
   </div>
 
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Отправить", class:"btn btn-primary" %>
+    <%= link_to "Вернуться к списку тестов", new_survey_url(test_id: @test_id), class: "btn btn-warning active" %> 
+
   </div>
 <% end %>
