--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
 
-<nav class="navbar navbar-expand-lg navbar-light", style="background-color: #A0D3F9;">
+<nav class="navbar navbar-expand-lg navbar-light", style="border-color: #89D8E5 white; border-style: solid">
   <%= link_to image_tag("logo.jpg", style: 'height:60px;width:auto;'), root_path, class: "navbar-left" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,12 +23,15 @@
         <a class="nav-link" href="/statements">Главная <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tests">Тесты</a>
+        <a class="nav-link" href="/posts">Блог</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/posts">Новости</a>
+        <a class="nav-link" href="/tests">Тестирование</a>
       </li>
-            <li class="nav-item">
+      <li class="nav-item">
+        <a class="nav-link" href="/tests">Мой сертификат</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Контакты</a>
       </li>
     </ul>
