--- a/app/views/tcategories/index.html.erb
+++ b/app/views/tcategories/index.html.erb
@@ -1,18 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tcategories</h1>
-
-<table>
+<h1 class="text-center">Категории</h1>
+<div class="col-md-3 d-block">
+<%= link_to 'Новая категория', new_tcategory_path,  class:"form-control btn-primary" %>
+</div>
+ <br>
+<table class="table">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
+      <th scope="col">Название</th>
+      <th scope="col">Описание</th>
     </tr>
   </thead>
 
+
   <tbody>
-    <% @tcategories.each do |tcategory| %>
+ <% @tcategories.each do |tcategory| %>
       <tr>
         <td><%= tcategory.title %></td>
         <td><%= tcategory.description %></td>
@@ -26,4 +29,3 @@
 
 <br>
 
-<%= link_to 'New Tcategory', new_tcategory_path %>
